Name separate containers

--- a/index.html
+++ b/index.html
@@ -20,12 +20,15 @@
 
   <body>
     <form>
+        <h2>Personal Details</h2>
       Name:
       <input type="text" id="name" name="name">
 
       Age:
       <input type="number" id="age" name="age">
-
+      </form>
+      <form>
+<h2>Comment Information</h2>
       Comment:
       <input type="text" id="comment" name="comment">
 
