Add label name for name

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
   <body>
     <form>
         <h2>Personal Details</h2>
-      Name:
+        <label for="name">
+      Name:</label>
       <input type="text" id="name" name="name">
 
       Age:
