--- a/index.html
+++ b/index.html
@@ -21,20 +21,32 @@
   <body>
     <form>
         <h2>Personal Details</h2>
-        <label for="name">
+    <ul>
+        <li>
+            <label for="name">
       Name:</label>
       <input type="text" id="name" name="name">
-
-      Age:
+      </li>
+<li>
+    <label for="Age">
+      Age:</label
       <input type="number" id="age" name="age">
-      </form>
+      </li>
+    </ul>  
+    </form>
       <form>
 <h2>Comment Information</h2>
+<ul>
+    <li>
       Comment:
       <input type="text" id="comment" name="comment">
-
+    </li>
+<li>
       Email:
       <input type="email" id="email" name="email">
+      </li>
+
+    </ul>
     </form>
   </body>
 
