--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <li>
     <label for="Age">
       Age:</label
-      <input type="number" id="age" name="age">
+      <input type="number" id="age" name="age" min="0" max="100">
       </li>
     </ul>  
     </form>
