--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
       <input type="text" id="name" name="name">
       </li>
 <li>
-    <label for="Age">
-      Age:</label
-      <input type="number" id="age" name="age" min="0" max="100">
+      <label></label> for="Age"
+      Age:</label> 
+      <input type="number" id="age" name="age" min="0" max="100" />
       </li>
     </ul>  
     </form>
