Attempt number 2 fix age label

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <input type="text" id="name" name="name">
       </li>
 <li>
-      <label></label> for="Age"
+      <label for="Age">
       Age:</label> 
       <input type="number" id="age" name="age" min="0" max="100" />
       </li>
