Add comment label

--- a/index.html
+++ b/index.html
@@ -38,8 +38,9 @@
 <h2>Comment Information</h2>
 <ul>
     <li>
-      Comment:
-      <input type="text" id="comment" name="comment">
+        <label for="Comment">
+      Comment:</label>
+      <textarea id="comment" name="user_message"></textarea>
     </li>
 <li>
       Email:
