Add label for Email

--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
       <textarea id="comment" name="user_message"></textarea>
     </li>
 <li>
-      Email:
+    <label for="Email">
+      Email:</label>
       <input type="email" id="email" name="email">
       </li>
 
